--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
   <body>
     <h1>Dog Blog - <em>Growlithe</em></h1>
     <img src="https://cdn.bulbagarden.net/upload/3/3d/058Growlithe.png" alt="Image of Growlithe" width="500" height="500">
-    <h2>Favorite Treats</h2>
+    <h2 class="section">Favorite Treats</h2>
       <ol>
         <li>Rare candy</li>
         <li>Puppuccino</li>
         <li>Fire stones</li>
       </ol>
     <p></p>
-    <h2>Favorite Activities</h2>
+    <h2 class="section">Favorite Activities</h2>
       <ul>
         <li>Breathe fire</li>
         <li>Chase <em>Caterpie</em></li>
         <li>Play with sticks</li>
       </ul>
-    <h2>Attacks</h2>
+    <h2 class="section">Attacks</h2>
     <img src="https://img.buzzfeed.com/buzzfeed-static/static/2016-07/25/15/enhanced/buzzfeed-prod-fastlane03/anigif_original-grid-image-7762-1469473247-6.gif" alt="Image of Growlithe's flamethrower attack">
       <ul>
         <li><strong>Growl</strong></li>
