add light and darkmode buttons, add js to switch themes
Co-authored-by: Deryck Jackson <Dgjackson01@gmail.com>

--- a/index.html
+++ b/index.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Dog Blog</title>
     <link href="css/styles.css" rel="stylesheet" type="text/css">
+    <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+    <script src="js/jquery-3.5.1.js"></script>
+    <script src="js/scripts.js"></script>
+    <title>Dog Blog</title>
   </head>
   <body>
+    <button type="button" class="btn btn-light" id="lightbutton">Light</button>
+    <button type="button" class="btn btn-dark" id="darkbutton">Dark</button>
     <h1>Dog Blog - <em>Growlithe</em></h1>
     <img src="https://cdn.bulbagarden.net/upload/3/3d/058Growlithe.png" alt="Image of Growlithe" width="500" height="500">
     <h2 class="section">Favorite Treats</h2>
